# DarkEmu

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  SETUP_COMPLETE.md  docker-compose.yml
.github/workflows/: ci.yml
client/: README.md
docs/: Build.md  Building-Client.md  Client.md  ConnectServer.md  Docker.md  GameServer.md  INDEX.md
include/Common/Network/: EpollContext.h  Socket.h
include/Common/Utils/: Logger.h
include/ConnectServer/: ServerEngine.h
include/ConnectServer/Managers/: ServerListManager.h
include/ConnectServer/Packets/: PocketDef.h
server/: README.md
server/Connect/: CMakeLists.txt  ServerEngine.cpp
server/Connect/Data/: ServerList.json
server/Connect/Managers/: ServerListManager.cpp
server/Connect/Packets/: PacketHandler.cpp
server/Game/: CMakeLists.txt  GameServer.cpp
server/common/: CMakeLists.txt
server/common/Utils/: Logger.cpp
server/include/ConnectServer/Packets/: PacketHandler.h
server/include/GameServer/: GameServer.h
server/tests/: CMakeLists.txt
server/tests/cpp/: ConnectServerProtocolTest.cpp  ConnectServerStressTest.cpp
src/Common/: CMakeLists.txt
src/Common/Network/: EpollContext.cpp  Socket.cpp
src/Common/Utils/: Logger.cpp
src/Servers/Connect/: CMakeLists.txt  ServerEngine.cpp  main.cpp
src/Servers/Connect/Managers/: ServerListManager.cpp
src/Servers/Game/: CMakeLists.txt  main.cpp
src/Servers/connect/: CMakeLists.txt  ServerEngine.cpp  main.cpp
tests/: CMakeLists.txt  ConnectServerProtocolTest.cpp  ConnectServerStressTest.cpp
tests/cpp/: ConnectServerProtocolTest.cpp  ConnectServerStressTest.cpp  GameServerConnectivityTest.cpp
tests/manual/: test_client.py
